# spendtrack

./: .gitmodules  CMakeLists.txt  README.md
src/: spendtrack.c  spendtrack.h
test/: test_spendtrack.c
